examples/test/testpolicy514.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy514
  namespace: namespace151
spec:
  podSelector:
    matchLabels:
      key13: value6
      key4: value31
      key28: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value4
      podSelector:
        matchLabels:
          key3: value1
          key20: value19
